Refs #142953 - Fix too large card for languages in landing page.

--- a/src/SearchBlock/less/styles.less
+++ b/src/SearchBlock/less/styles.less
@@ -140,6 +140,7 @@ div#page-document {
 
             div.ui.card {
               width: auto !important;
+              max-width: 360px;
             }
           }
         }
